@@ -33,9 +33,9 @@
   </menu>
 
   <dockitem name="Toolbar">
-    <toolitem name="InsertResource" verb="" _label="Insert"/>
-    <toolitem name="RemoveResource" verb="" _label="Remove"/>
-    <toolitem name="EditGroups"     verb="" _label="Groups"/>
+    <toolitem name="InsertResource" verb="" _label="Insert" _tip="Insert a new resource"/>
+    <toolitem name="RemoveResource" verb="" _label="Remove" _tip="Remove the selected resource"/>
+    <toolitem name="EditGroups"     verb="" _label="Groups" _tip="Edit resource groups"/>
   </dockitem>
 </Root>
 
