@@ -57,14 +57,14 @@
   </menu>
 
   <dockitem name="Toolbar">
-    <toolitem name="InsertTask"   verb="" _label="Insert"/>
-    <toolitem name="RemoveTask"   verb="" _label="Remove"/>
-    <toolitem name="LinkTasks"   verb="" _label="Link"/>
-    <toolitem name="UnlinkTask"   verb="" _label="Unlink"/>
-    <toolitem name="IndentTask"   verb="" _label="Indent"/>
-    <toolitem name="UnindentTask" verb="" _label="Unindent"/>
-    <toolitem name="MoveTaskUp"	  verb="" _label="Move up"/>
-    <toolitem name="MoveTaskDown" verb="" _label="Move down"/>
+    <toolitem name="InsertTask"   verb="" _label="Insert"        _tip="Insert a new task"/>
+    <toolitem name="RemoveTask"   verb="" _label="Remove"        _tip="Remove the selected tasks"/>
+    <toolitem name="LinkTasks"    verb="" _label="Link"          _tip="Link the selected tasks"/>
+    <toolitem name="UnlinkTask"   verb="" _label="Unlink"        _tip="Unlink the selected tasks"/>
+    <toolitem name="IndentTask"   verb="" _label="Indent"        _tip="Indent the selected tasks"/>
+    <toolitem name="UnindentTask" verb="" _label="Unindent"      _tip="Unindent the selected tasks"/>
+    <toolitem name="MoveTaskUp"   verb="" _label="Move up"       _tip="Move the selected tasks upwards"/>
+    <toolitem name="MoveTaskDown" verb="" _label="Move down"     _tip="Move the selected tasks downwards"/>
   </dockitem>
 
 </Root>
