@@ -33,9 +33,9 @@
   </menu>
 
   <dockitem name="Toolbar">
-    <toolitem name="ZoomToFit"    verb=""/>
-    <toolitem name="ZoomIn"       verb=""/>
-    <toolitem name="ZoomOut"      verb=""/>
+    <toolitem name="ZoomToFit"    verb="" _tip="Zoom to fit the entire project"/>
+    <toolitem name="ZoomIn"       verb="" _tip="Zoom in"/>
+    <toolitem name="ZoomOut"      verb="" _tip="Zoom out"/>
     <!--separator/-->
     <!--toolitem name="Test" verb=""/-->
   </dockitem>
