@@ -1,5 +1,13 @@
 2004-04-06  Richard Hult  <richard@imendio.com>
 
+	* data/ui/gantt-view.ui:
+	* data/ui/resource-view.ui:
+	* data/ui/task-view.ui:
+	* data/ui/time-table-view.ui: Add tooltips, patch from Setul
+	Patel. Fixes bug #130937.
+
+2004-04-06  Richard Hult  <richard@imendio.com>
+
 	* data/dtd/mrproject-0.6.dtd:
 	* data/glade/task-dialog.glade:
 	* data/stylesheets/html1_css.xsl:
